# Echosense

./: Assembly-CSharp.csproj  Echosense.sln  LICENSE  README.md  mono_crash.0.0.json  mono_crash.34a2c5dc6.0.json
Assets/: BasicScene.unity  CMakeLists.txt  Corridor.unity  GeometryProcessorManager.prefab  Tree.prefab  test scene.unity  walsl.mat
Assets/Archive/: Skybox.mat  Stenen.mat  Wall.mat
Assets/Plugins/: geometry_processor.bundle
Assets/Plugins/MacOS/: geometry_processor.bundle
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: GeometryProcessor.cs  SimpleCameraController.cs  TimeFrequencyVisualizer.cs
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
NativePlugin/: CMakeLists.txt
NativePlugin/src/: GeometryProcessor.cpp  GeometryProcessor.h
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Temp/: workerlic
Temp/__Backupscenes/: 0.backup
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2022.dwlt  default-6000.dwlt
